--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 0px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><a href="#" class="mbri-numbered-list mbr-iconfont mbr-iconfont-features3" style="color: rgb(255, 0, 0);"></a></div>
+                    <div class="card-img"><a class="mbri-numbered-list mbr-iconfont mbr-iconfont-features3" style="color: rgb(255, 0, 0);"></a></div>
                     <div class="card-block">
                         <h4 class="card-title">Минимум пунктов для достижения цели</h4>
                         
@@ -202,7 +202,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-4" style="padding-top: 0px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><a href="#" class="etl-icon icon-pencil mbr-iconfont mbr-iconfont-features3" style="color: rgb(255, 0, 0);"></a></div>
+                    <div class="card-img"><a class="etl-icon icon-pencil mbr-iconfont mbr-iconfont-features3" style="color: rgb(255, 0, 0);"></a></div>
                     <div class="card-block">
                         <h4 class="card-title">Без договоров</h4>
                         
